# python-project-49

./: README.md  hexlet-code.toml  makefile  pyproject.toml  ruff.toml
brain_games/: __init__.py  cli.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python_project_49.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
